add player dialog complete

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,15 +1,26 @@
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}"
+    class="playerPosition" [name]="player"></app-player>
+
 <div class="field">
-
-
-
     <div class="card-stack">
-        <img [ngStyle]="{'right.px':i*7}" *ngFor="let c of [0,1,2,3]; let i = index;"
-            src="/assets/img/cards/card_cover.png" alt="Card Back">
+        <img [ngStyle]="{'right.px':i*7}" *ngFor="let c of [0,1,2,3]; let i = index;" src="/assets/img/card_cover.png"
+            alt="Card Back">
 
-        <img (click)="takeCard()" class="topCard" style="right: 28px" src="/assets/img/cards/card_cover.png"
+        <img (click)="takeCard()" class="topCard" style="right: 28px" src="/assets/img/card_cover.png" alt="Card Back">
+
+
+
+        <img *ngFor="let card of game.playedCard" class="played-card" src="/assets/img/cards/{{card}}.png"
             alt="Card Back">
 
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 28px"
-            src="/assets/img/cards/ace_1.png" alt="Card Back">
+            src="/assets/img/cards/{{currentCard}}.png" alt="Card Back">
+
     </div>
 </div>
+
+
+
+<button (click)="openDialog()" mat-fab color="primary" class="btn-add">
+    <mat-icon>add</mat-icon>
+</button>
