--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,6 @@ body {
   background-image: url('assets/img/wood.jpg');
     background-size: cover;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
