--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}"
-    class="playerPosition" [name]="player"></app-player>
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}"
+    class="playerPosition" [name]="player" [playerActive]="i == game.currentPlayer"></app-player>
 
 <div class="field">
     <div class="card-stack">
@@ -19,6 +19,8 @@
     </div>
 </div>
 
+
+<app-game-info [card]="currentCard" class="pinBottom"></app-game-info>
 
 
 <button (click)="openDialog()" mat-fab color="primary" class="btn-add">
