--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -13,14 +13,14 @@
         <img *ngFor="let card of game.playedCard" class="played-card" src="assets/img/cards/{{card}}.png"
             alt="Card Back">
 
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 28px"
-            src="assets/img/cards/{{currentCard}}.png" alt="Card Back">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 28px"
+            src="assets/img/cards/{{game.currentCard}}.png" alt="Card Back">
 
     </div>
 </div>
 
 
-<app-game-info [card]="currentCard" class="pinBottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pinBottom"></app-game-info>
 
 
 <button (click)="openDialog()" mat-fab color="primary" class="btn-add">
