--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -3,10 +3,21 @@
   width: 100vw;
   height: 100vh;
   max-width: 100%;
+
   img {
     width: 800px;
     height: auto;
+
+    @media (max-width: 960px) {
+      width: 500px;
+    }
+
+    @media (max-width: 560px) {
+      width: 300px;
+    }
   }
+
+
 }
 
 
@@ -35,5 +46,8 @@
     transform: scale(0.90);
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   }
-}
 
+  @media (max-width: 560px) {
+    font-size: 1rem;
+  }
+}
