--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,27 @@ body {
   background-color: #404040;
   color: white;
   background-image: url('assets/img/wood.jpg');
-    background-size: cover;
+  background-size: cover;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@media (max-width: 720px) {
+  .hide-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 720px) {
+  .scrollContainer.hide-desktop {
+    display: none !important;
+  }
+}
