--- a/src/app/edit-player/edit-player.component.html
+++ b/src/app/edit-player/edit-player.component.html
@@ -1,5 +1,17 @@
 <h2 mat-dialog-title>Edit Player</h2>
 
+<div style="display: flex; flex-wrap: wrap;">
+  <img
+    [mat-dialog-close]="picture"
+    *ngFor="let picture of allProfilePictures"
+    src="./assets/img/profile/{{ picture }}"
+    alt="Profile Picture"
+    class="profile-picture"
+    style="margin: 8px; cursor: pointer;"
+  >
+</div>
 
-<img [mat-dialog-close]="picture" *ngFor="let picture of allProfilePictures" src="./assets/img/profile/{{ picture }}" alt="Profile Picture"
-    class="profile-picture">
+<mat-dialog-actions>
+  <button mat-button (click)="dialogRef.close()">Close</button>
+  <button mat-button color="warn" [mat-dialog-close]="'DELETE'" cdkFocusInitial>Delete Player</button>
+</mat-dialog-actions>
