--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,10 @@
-<app-player (click)="editPlayer()" *ngFor="let player of game.players; let i = index"
-    [ngStyle]="{'top.px': 100 + (i * 90)}" class="playerPosition hide-mobile" [name]="player"
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index"
+    [ngStyle]="{'top.px': 80 + (i * 70)}" class="playerPosition hide-mobile" [name]="player"
     [playerActive]="i == game.currentPlayer"
     [image]="game.player_images[i]"></app-player>
 
 <div class="scrollContainer hide-desktop">
-    <app-player-mobile (click)="editPlayer()" *ngFor="let player of game.players; let i = index"
+    <app-player-mobile (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index"
         [ngStyle]="{'left.px': 10 + (i * 100)}" [name]="player"
         [playerActive]="i == game.currentPlayer"
         [image]="game.player_images[i]"></app-player-mobile>
