--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -5,16 +5,20 @@
     width: 300px;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    overflow: hidden;
 
     span {
         margin-left: 16px;
-        font-size: 32px;
+        font-size: 24px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
 
     }
 
     img {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         object-fit: cover;
     }
