--- a/src/app/player-mobile/player-mobile.component.scss
+++ b/src/app/player-mobile/player-mobile.component.scss
@@ -9,8 +9,8 @@
 
     span {
         font-size: 24px;
-                margin-top: 16px;
-
+        margin-top: 16px;
+        word-break: break-all;
     }
 
     img {
@@ -25,4 +25,3 @@
 .playerActive {
     background-color: rgb(0, 167, 0);
 }
-
